# GameBridgeSample

./: .gitmodules  package.json
.github/workflows/: Deploy.yml
assets/: scene.scene
assets/bundle/: GameEntry.ts  GameScene.prefab  MainGameView.ts  RotateComp.ts  entry.prefab
assets/plugins/crypto-js/: declare.d.ts
deploy/: version.json
deploy/bundle/: cc.config.0308c.json  cc.config.0f131.json  cc.config.2001f.json  cc.config.6543b.json  index.6543b.js
deploy/bundle/import/02/: 02a311723.5024e.json
deploy/bundle/import/05/: 052eb67f0.20f89.json
deploy/bundle/import/0b/: 0b2a10d41.f9dfa.json
deploy/bundle/import/0c/: 0c459c03e.fecfd.json  0c459c03e.ffb10.json
deploy/bundle/import/0e/: 0e1f05e55.c9796.json
deploy/bundle/import/0f/: 0f1597b33.41203.json  0f75fc949.40d3c.json
deploy/devil-fire/: cc.config.json  index.js
deploy/devil-fire/import/05/: 057c4258a.json
extensions/effekseer/: README.md  package.json  tsconfig.json
extensions/effekseer/engine/native/effekseer/EffekseerRendererCommon/: CMakeLists.txt  EffekseerRenderer.Renderer.cpp  ModelLoader.cpp
extensions/effekseer/i18n/: en.js  zh.js
extensions/effekseer/src/: builder.ts  hooks.ts  main.ts  menu.ts  scene.ts
extensions/effekseer/wasm/: effekseer.js  effekseer.wasm
extensions/game-bridge/: package-lock.json  package.json  tsconfig.json
extensions/game-bridge/assets/: GameEntryBase.ts  Types.ts
extensions/game-bridge/source/: main.ts
extensions/patch-version-builder/: package-lock.json
native/engine/android/: CMakeLists.txt
native/engine/win64/: CMakeLists.txt
(+95 files in other folders)
